sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:6: error: value ==- is not a member of Int
    if(posi==-1){posi=0}
           ^