sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
	val lgr=getNombreValeurs()
	var posi=0
  while(posi<lgr-1){
    if(posi==-1){posi=0}
    else if(plusPetit(posi+1,posi)){echange(posi+1,posi);posi-=1}
    else{posi+=1}
  }}